ffi/include/eloqstore_capi.h

    // ============================================================
    // Error code definitions
    // ============================================================
    typedef enum CEloqStoreStatus
    {
        CEloqStoreStatus_Ok = 0,
        CEloqStoreStatus_InvalidArgs,
        CEloqStoreStatus_NotFound,
        CEloqStoreStatus_NotRunning,
        CEloqStoreStatus_Corrupted,
        CEloqStoreStatus_EndOfFile,
        CEloqStoreStatus_OutOfSpace,
        CEloqStoreStatus_OutOfMem,
        CEloqStoreStatus_OpenFileLimit,
        CEloqStoreStatus_TryAgain,
        CEloqStoreStatus_Busy,
        CEloqStoreStatus_Timeout,
        CEloqStoreStatus_NoPermission,
        CEloqStoreStatus_CloudErr,
        CEloqStoreStatus_IoFail,
        CEloqStoreStatus_ExpiredTerm,
        CEloqStoreStatus_OssInsufficientStorage,
        CEloqStoreStatus_AlreadyExists,
    } CEloqStoreStatus;
    // ============================================================
    // Opaque handle types
    // ============================================================
    typedef void *CEloqStoreHandle;
    typedef void *CTableIdentHandle;
    typedef void *CBatchWriteHandle;
    typedef void *CGlobalRegisteredMemoryHandle;
    typedef void *CIoStringBufferHandle;
    typedef void *CAsyncHandle;
    typedef enum CValueKind
    {
        CValueKind_NotFound = 0,
        CValueKind_Small = 1,
        CValueKind_Large = 2,
    } CValueKind;
    // ============================================================
    // Write operation enum
    // ============================================================
    typedef enum CWriteOp
    {
        CWriteOp_Upsert = 0,
        CWriteOp_Delete = 1,
    } CWriteOp;
    // ============================================================
    // Output structures
    // ============================================================

    // Get operation result
    typedef struct CGetResult
    {
        const uint8_t *value;
        size_t value_len;
        uint64_t timestamp;
        uint64_t expire_ts;
        bool found;
        bool owns_value;
    } CGetResult;
    typedef struct CLargeValueResult
    {
        CIoStringBufferHandle value;
        size_t value_len;
        uint64_t timestamp;
        uint64_t expire_ts;
        bool found;
        CValueKind kind;
    } CLargeValueResult;
    typedef struct CIoStringFragment
    {
        uint8_t *data;
        size_t len;
        uint16_t buf_index;
        uint32_t chunk_index;
        size_t offset;
    } CIoStringFragment;
    // ============================================================
    // Options API
    // ============================================================

    CEloqStoreHandle CEloqStore_Options_Create(void);
    void CEloqStore_Options_Destroy(CEloqStoreHandle opts);
    void CEloqStore_Options_SetNumThreads(CEloqStoreHandle opts, uint16_t n);
    void CEloqStore_Options_SetBufferPoolSize(CEloqStoreHandle opts,
                                              uint64_t size);
    void CEloqStore_Options_SetDataPageSize(CEloqStoreHandle opts,
                                            uint16_t size);
    void CEloqStore_Options_SetManifestLimit(CEloqStoreHandle opts,
                                             uint32_t limit);
    void CEloqStore_Options_SetFdLimit(CEloqStoreHandle opts, uint32_t limit);
    void CEloqStore_Options_SetPagesPerFileShift(CEloqStoreHandle opts,
                                                 uint8_t shift);
    void CEloqStore_Options_SetOverflowPointers(CEloqStoreHandle opts,
                                                uint8_t n);
    void CEloqStore_Options_SetDataAppendMode(CEloqStoreHandle opts,
                                              bool enable);
    void CEloqStore_Options_SetEnableCompression(CEloqStoreHandle opts,
                                                  bool enable);
    void CEloqStore_Options_SetSegmentSize(CEloqStoreHandle opts,
                                           uint32_t size);
    void CEloqStore_Options_SetRegisteredMemoryChunkSize(CEloqStoreHandle opts,
                                                         uint64_t size);
    void CEloqStore_Options_SetSegmentsPerFileShift(CEloqStoreHandle opts,
                                                    uint8_t shift);
    void CEloqStore_Options_SetGlobalRegisteredMemory(
        CEloqStoreHandle opts,
        uint32_t shard_id,
        CGlobalRegisteredMemoryHandle mem);
    void CEloqStore_Options_AddStorePath(CEloqStoreHandle opts,
                                         const char *path);
    bool CEloqStore_Options_LoadFromIni(CEloqStoreHandle opts,
                                        const char *path);
    bool CEloqStore_Options_Validate(CEloqStoreHandle opts);
    // ============================================================
    // Engine lifecycle
    // ============================================================

    CEloqStoreHandle CEloqStore_Create(CEloqStoreHandle options);
    void CEloqStore_Destroy(CEloqStoreHandle store);
    CEloqStoreStatus CEloqStore_StartWithBranch(CEloqStoreHandle store,
                                                const char *branch,
                                                uint64_t term,
                                                uint32_t partition_group_id);
    void CEloqStore_Stop(CEloqStoreHandle store);
    bool CEloqStore_IsStopped(CEloqStoreHandle store);
    uint16_t CEloqStore_GlobalRegMemIndexBase(CEloqStoreHandle store,
                                              size_t shard_id);
    // ============================================================
    // Table identifier
    // ============================================================

    CTableIdentHandle CEloqStore_TableIdent_Create(const char *table_name,
                                                   uint32_t partition_id);
    void CEloqStore_TableIdent_Destroy(CTableIdentHandle ident);
    // ============================================================
    // Flattened write API (simple operations)
    // ============================================================

    // Single Put operation (implemented using BatchWrite)
    CEloqStoreStatus CEloqStore_Put(CEloqStoreHandle store,
                                    CTableIdentHandle table,
                                    const uint8_t *key,
                                    size_t key_len,
                                    const uint8_t *value,
                                    size_t value_len,
                                    uint64_t timestamp);
    // Batch Put operation - write multiple key-value pairs at once
    // keys: key pointer array
    // values: value pointer array
    // count: element count
    CEloqStoreStatus CEloqStore_PutBatch(CEloqStoreHandle store,
                                         CTableIdentHandle table,
                                         const uint8_t *const *keys,
                                         const size_t *key_lens,
                                         const uint8_t *const *values,
                                         const size_t *value_lens,
                                         size_t count,
                                         uint64_t timestamp);
    // Single Delete operation (implemented using BatchWrite)
    CEloqStoreStatus CEloqStore_Delete(CEloqStoreHandle store,
                                       CTableIdentHandle table,
                                       const uint8_t *key,
                                       size_t key_len,
                                       uint64_t timestamp);
    // Batch Delete operation - delete multiple keys at once
    CEloqStoreStatus CEloqStore_DeleteBatch(CEloqStoreHandle store,
                                            CTableIdentHandle table,
                                            const uint8_t *const *keys,
                                            const size_t *key_lens,
                                            size_t count,
                                            uint64_t timestamp);
    // ============================================================
    // Flattened read API (simple operations)
    // ============================================================

    CEloqStoreStatus CEloqStore_Get(CEloqStoreHandle store,
                                    CTableIdentHandle table,
                                    const uint8_t *key,
                                    size_t key_len,
                                    CGetResult *out_result);
    CEloqStoreStatus CEloqStore_GetInto(CEloqStoreHandle store,
                                        CTableIdentHandle table,
                                        const uint8_t *key,
                                        size_t key_len,
                                        uint8_t *out_value,
                                        size_t out_capacity,
                                        CGetResult *out_result);
    CEloqStoreStatus CEloqStore_GetLarge(CEloqStoreHandle store,
                                         CTableIdentHandle table,
                                         const uint8_t *key,
                                         size_t key_len,
                                         CLargeValueResult *out_result);
    CAsyncHandle CEloqStore_GetLargeAsync(CEloqStoreHandle store,
                                          CTableIdentHandle table,
                                          const uint8_t *key,
                                          size_t key_len,
                                          CGlobalRegisteredMemoryHandle mem,
                                          uint16_t reg_mem_index_base);
    CEloqStoreStatus CEloqStore_AsyncGetLargeResult(
        CAsyncHandle handle,
        CLargeValueResult *out_result);
    CEloqStoreStatus CEloqStore_PutLarge(CEloqStoreHandle store,
                                         CTableIdentHandle table,
                                         const uint8_t *key,
                                         size_t key_len,
                                         CIoStringBufferHandle value,
                                         CGlobalRegisteredMemoryHandle mem,
                                         uint16_t reg_mem_index_base,
                                         uint64_t timestamp);
    CEloqStoreStatus CEloqStore_Exists(CEloqStoreHandle store,
                                       CTableIdentHandle table,
                                       const uint8_t *key,
                                       size_t key_len,
                                       bool *out_exists);
    // Free Get result (allocated by C++)
    void CEloqStore_FreeGetResult(CGetResult *result);
    // ============================================================
    // BatchWrite request API (complex operations - preserve Request pattern)
    // ============================================================

    CBatchWriteHandle CEloqStore_BatchWrite_Create(void);
    void CEloqStore_BatchWrite_Destroy(CBatchWriteHandle req);
    void CEloqStore_BatchWrite_SetTable(CBatchWriteHandle req,
                                        CTableIdentHandle table);
    void CEloqStore_BatchWrite_AddLargeEntry(CBatchWriteHandle req,
                                             const uint8_t *key,
                                             size_t key_len,
                                             CIoStringBufferHandle value,
                                             uint64_t timestamp,
                                             CWriteOp op,
                                             uint64_t expire_ts);
    void CEloqStore_BatchWrite_Clear(CBatchWriteHandle req);
    void CEloqStore_BatchWrite_RecycleLargeEntries(
        CBatchWriteHandle req,
        CGlobalRegisteredMemoryHandle mem,
        uint16_t reg_mem_index_base);
    CEloqStoreStatus CEloqStore_ExecBatchWrite(CEloqStoreHandle store,
                                               CBatchWriteHandle req);
    CAsyncHandle CEloqStore_ExecBatchWriteAsync(
        CEloqStoreHandle store,
        CBatchWriteHandle req,
        CGlobalRegisteredMemoryHandle mem,
        uint16_t reg_mem_index_base);
    bool CEloqStore_AsyncIsDone(CAsyncHandle handle);
    CEloqStoreStatus CEloqStore_AsyncWait(CAsyncHandle handle);
    CEloqStoreStatus CEloqStore_AsyncStatus(CAsyncHandle handle);
    void CEloqStore_AsyncDestroy(CAsyncHandle handle);
    // ============================================================
    // Zero-copy registered memory and large-value buffers
    // ============================================================

    CGlobalRegisteredMemoryHandle CEloqStore_GlobalMemory_Create(
        uint32_t segment_size,
        uint64_t chunk_size,
        uint64_t total_size);
    void CEloqStore_GlobalMemory_Destroy(CGlobalRegisteredMemoryHandle mem);
    uint32_t CEloqStore_GlobalMemory_SegmentSize(
        CGlobalRegisteredMemoryHandle mem);
    size_t CEloqStore_GlobalMemory_TotalSegments(
        CGlobalRegisteredMemoryHandle mem);
    size_t CEloqStore_GlobalMemory_FreeSegments(
        CGlobalRegisteredMemoryHandle mem);
    CIoStringBufferHandle CEloqStore_GlobalMemory_AllocateIoString(
        CGlobalRegisteredMemoryHandle mem,
        size_t size,
        uint16_t reg_mem_index_base);
    void CEloqStore_IoStringBuffer_Destroy(CIoStringBufferHandle buf);
    void CEloqStore_IoStringBuffer_Recycle(CIoStringBufferHandle buf,
                                           CGlobalRegisteredMemoryHandle mem,
                                           uint16_t reg_mem_index_base);
    size_t CEloqStore_IoStringBuffer_Size(CIoStringBufferHandle buf);
    size_t CEloqStore_IoStringBuffer_FragmentCount(CIoStringBufferHandle buf);
    bool CEloqStore_IoStringBuffer_FragmentAt(CIoStringBufferHandle buf,
                                              size_t index,
                                              CIoStringFragment *out_fragment);
    // ============================================================
    // Error message query
    // ============================================================

    const char *CEloqStore_GetLastError(CEloqStoreHandle store);